--- a/css/style.css
+++ b/css/style.css
@@ -1159,7 +1159,7 @@ input[type=radio].visually-hidden {
 }
 
 .team__article {
-  width: 33.33%;
+  width: calc(100%/3);
   height: 395px;
   float: left;
   position: relative;
